--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 aiohttp==1.1.6
 async-timeout==1.1.0
 beautifulsoup4==4.4.1
+chardet==2.3.0
+click==6.6
+Flask==0.11.1
+itsdangerous==0.24
+Jinja2==2.8
+lxml==3.6.4
+MarkupSafe==0.23
+multidict==2.1.4
 urllib3==1.13.1
+Werkzeug==0.11.11
+yarl==0.8.1
